# QChat

./: .gitignore  CMakeLists.txt  README.md
resources/: res.qrc
resources/qss/: EVA_default.qss
src/: CMakeLists.txt  main.cpp
src/lan/: lan.cpp  lan.h  lan_test.cpp
src/network/: NetworkManager.cpp  NetworkManager.h  NetworkManagerTest.cpp  NetworkTester.cpp  NetworkTester.h  README.md
src/ui/: chatwindow.ui  drawwindow.cpp  expandwindow.cpp  expandwindow.h  expandwindow.ui  friendwindow.cpp  friendwindow.h  friendwindow.ui  mainui.cpp  mainui.h  mainui.ui  settingswindow.ui
